<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FusionLeo</string>
    <string name="app_as">Follow us</string>
    <string name="app_rom">ROM information</string>
    <string name="app_name_sumarry">Do your best , forget the rest</string>
    <string name="no_app_name_donate">This is a free version , some function and custmosize wii be locked</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="color_chooser">Choose your theme</string>
    <string name="assist_grid_log">Log cat</string>
    <string name="assist_grid_autostart">Autostart manager</string>
    <string name="assist_grid_apps">Apps manager</string>
    <string name="assist_grid_wifi">Locall wifi password</string>
    <string name="nav_donate">Donation</string>
    <string name="nav_source_library">Gratitude and Reource library</string>
    <string name="nav_power_meun">Power menu</string>
    <string name="nav_changelog">Changelog</string>
    <string name="nav_help">Help</string>
    <string name="nav_share">share</string>
    <string name="share_chooser_title">Share Leo ROM</string>
	 <string name="donate_info_ota">1.Donate for 15-30 Dollar(~HKD100) you will get fully function and custmosize\n2.Donate at least 15 dollar \n3.After donate join the chat room at below :Home-Join chatroom\n5.And capture your transformation information ,donation send to chatroom of pm the developer (Press the chat room below)</string>
    <string name="share_message">"I'm using \n"</string>
    <string name="share_message_content">https://www.leorom.cc/</string>
    <string name="backup_file_exists">Overwrite the file?</string>
    <string name="backup_file_repea">File is appeare，Select to overwrite ?</string>
    <string name="flash_hint">Is it flash</string>
    <string name="flash_zip">Flash into your device,make sure your file is suitable with your device</string>
    <string name="flash_efs">Flash EFS image, If flashing the wrong image ,you will lost IMEI AND CANT NOT BOOT UP!!</string>
    <string name="flash_rec">Flash TWRP recovery , We cant not ensure your recovery is correct ,Make sure your recovery file is suitable for your devices!</string>
    <string name="flash_boot">Flash Boot/kernel image,make sure your file is suitable with your device,Flashing incorrect image will cause your phone bootloop or other problem!</string>
    <string name="flash_confirm">Confirm flash?</string>
    <string name="backup_action_title_boot">Backup boot</string>
    <string name="backup_action_title">Backuping</string>
    <string name="restore_action_title_boot">Flashing Boot</string>
    <string name="restore_action_desc_boot">Select to flash boot.img</string>
    <string name="backup_space_small">Device space is not enough ，please clean up atleast 10GB space！</string>
    <string name="backup_action_title_rec">Backup Recovery</string>
    <string name="backup_action_sumarry">to img,copy to</string>
    <string name="restore_action_title_rec">Flashing Recovery</string>
    <string name="restore_action_desc_rec">Select to flash recovery.img</string>
    <string name="backup_action_title_efs">Backup EFS</string>
    <string name="restore_action_title_efs">Flash EFS</string>
    <string name="restore_action_desc_efs">Select to Flash EFS.img</string>
    <string name="thermal_default_summary">Disable thermal will increase stablize ,but bring up lotof heat effect</string>
    <string name="restore_action_title_zip">Zip Flash</string>
    <string name="on">ON</string>
    <string name="off">off</string>
    <string name="list_grid_other">Other</string>
    <string name="leo_tweaks_launcher_downtap">"Launcher downtap（&#8594;Mainscreen setting&#8594;open notification&#8592; ）Invalid,Close it before setup&#8594;Click here to open(Mainscreen setting)"
</string>
    <string name="text_set">Text set</string>
    <string name="font_style">Font style</string>
    <string name="stroke_start">Stroke start</string>
    <string name="stroke_color">stroke color</string>
    <string name="stroke_thickness">stroke thickness</string>
    <string name="stroke_width">stroke width</string>
    <string name="stroke_gap">stroke gap</string>
    <string name="stroke_corners">stroke corners</string>
    <string name="seksbar_sumarry">seksbar sumarry</string>
    <string name="tabs_battery">battery logo</string>
    <string name="logcat_title">Logcat</string>
    <string name="kmesg_title">kernel cat</string>
    <string name="dmesg_title">boot cat</string>
    <string name="log_it_title">cat log</string>
    <string name="log_it_summary">please wait to cat the log</string>
    <string name="log_it_share_type_title">share method</string>
    <string name="random_color">random color</string>
    <string name="random_color_summary">random select color</string>
    <string name="seek_summary">@string/seksbar_sumarry</string>
    <string name="white_color">default color :#ffffffff</string>
    <string name="blue_color">default color :#6033b5e5</string>
    <string name="transparency_color">default color :#00000000</string>
    <string name="stroke_color_summary">default color :#FF00BCD4</string>
    <string name="vibrator_title">Vibration feedback</string>
    <string name="vibrator">allow Vibration feedback</string>
    <string name="vibrator_level">Vibration feedback level</string>
    <string name="vibrator_level_summary">swipe left and right level</string>
    <string name="text_size">text size</string>
    <string name="custom_text_essage">input any text and enoji</string>
    <string name="custom_text_title">edit text</string>
    <string name="recents_memory_gategory">recent menu show ram usage</string>
    <string name="recents_memory_title">recent menu show ram info</string>
    <string name="recents_memory_info_refresh_gategory">show setting</string>
    <string name="recents_memory_info_refresh_title">show time</string>
    <string name="recents_memory_click_gategory">clean up backgroup</string>
    <string name="recents_memory_click_title">click to allow clean up backgroup</string>
    <string name="recents_memory_info_language">show language</string>
    <string name="recents_memory_info_textcolor">ram text color</string>
    <string name="recents_memory_info_usedcolor">use color（%）</string>
    <string name="recents_memory_info_freecolor">remain color（%）</string>
    <string name="recents_memory_info_bgcolor_gategory">backgroup setting</string>
    <string name="recents_memory_info_bgcolor">backgroup color</string>
    <string name="google_services">freeze google service</string>
    <string name="dual_app">double app</string>
    <string name="dual_app_cloned">double app clone</string>
    <string name="dual_app_cloned_yes">support current all double app lone</string>
    <string name="dual_app_cloned_no">upport all double app lone</string>
    <string name="tweaks_location">location</string>
    <string name="tweaks_location_summary">select location base on your need</string>
    <string name="tweaks_wipe">clean data</string>
    <string name="tweaks_wipe_summary">clean</string>
    <string name="stk_dialog">SIM dialog</string>
    <string name="system_animation">system animation</string>
    <string name="window_animation">windows animation</string>
    <string name="transition_animation">transition animation</string>
    <string name="animator_duration">animator duration</string>
    <string name="mokee_animation">mokee animation</string>
    <string name="list_animation">list animation</string>
    <string name="list_interpolator">list interpolator animation</string>
    <string name="toast_animation">Toast animation</string>
    <string name="secure_window">Secure lock</string>
    <string name="secure_window_yes"> enable Secure lock</string>
    <string name="secure_window_no">enable capture in Secure lock</string>
    <string name="main_battery">battery icon switch</string>
    <string name="custombattery_preference">custombattery preference</string>
    <string name="battery_percentage">battery percentage</string>
    <string name="disable_stock_battery_icon">disable stock battery icon</string>
    <string name="battery_color">battery color(not support samsung stock icon)</string>
  <string name="battery_allow_standby_charge">custom color </string>
<string name="battery_standby_color">icon color </string>
<string name="battery_text_standby_color">percentage color</string>
<string name="battery_text_title"> size setting (not official) </string>
<string name="battery_text_size">percentage text size </string>
<string name="battery_icon_size">charge icon size </string>
<string name="custombattery_preference_sumarry">Select more battery packs. You can also download more battery packs. If you are not satisfied with the battery pack we provide, you can also make your own favorite battery icon </string>
<string name="theme">themes </string>
<string name="app_theme"> theme settings </string>
<string name="subtitle">title setting </string>
<string name="switch_subtitle">Switch subtitle </string>
<string name="subtitle_label_hint"> "For example: don't forget your heart, you can always "</string>
<string name="subtitle_label">Custom subtitle text</string>
<string name="app_clear">Create a "one-click acceleration" shortcut on the desktop </string>
<string name="app_launcher_enabled">FusionLeo desktop icon </string>
<string name="app_launcher_enabled_yes">Show the FusionLeo icon on the desktop </string>
<string name="app_launcher_enabled_no">Hide the desktop FusionLeo icon</string>
<string name="switch_donate">not donated tips </string>
<string name="switch_donate_summary">The next time you start the Leo setting, the prompt will no longer be displayed </string>
<string name="switch_donate_summary2">Show donation tips </string>
<string name="fab_style">Fab floating button </string>
<string name="log_log">log item </string>
<string name="log_summary">If the software FC appears this log must be crawled </string>
<string name="log_clean">clean up </string>
<string name="log_clean_summary">delete the last crawl log file </string>
    <string name="launcher_layout">desktop layout</string>
<string name="launcher_layout_tilte"> home screen layout </string>
<string name="launcher_layout_tilte_sumarry">Home screen and application screen </string>
<string name="launcher_effect_tilte">Desktop effects</string>
<string name="launcher_effect">Select desktop effects </string>
<string name="launcher_icon_sink_tilte">Desktop icon sinking</string>
<string name="launcher_icon_sink">icon sinking</string>
<string name="launcher_uptap_tilte"> slide on the desktop </string>
<string name="launcher_uptap">Allow custom slides on the desktop</string>
<string name="launcher_uptap_action">Customize the sliding desktop action</string>
<string name="launcher_uptap_app">Upper desktop launcher</string>
<string name="launcher_downtap_tilte">Desktop slides</string>
<string name="launcher_downtap">Allow custom desktop slide action</string>
<string name="launcher_downtap_action"> custom slide desktop action </string>
<string name="launcher_downtap_app">slide desktop launcher</string>
<string name="launcher_doubletap_tilte"> desktop double click </string>
<string name="launcher_doubletap">Enable double-click desktop action</string>
<string name="launcher_doubletap_action">Custom double-click desktop action </string>
<string name="launcher_doubletap_app">Double-click the desktop launcher</string>
<string name="launcher_text_color_tilte">desktop APP text</string>
<string name="launcher_text_color_toggle">Allow custom desktop APP text color</string>
<string name="launcher_text_color">desktop APP text color</string>
<string name="launcher_text_font">Desktop APP text font </string>
    <string name="google_services_install_yes">installing google services</string>
</resources>