<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/google_services"/>
    <com.fusionleo.salt.preference.MyPreference android:title="@string/google_services_install_yes" android:key="leo_tweaks_google_services"/>
    <com.fusionleo.salt.preference.MyListPreference android:entries="@array/google_services_options" android:title="@string/google_services" android:key="leo_tweaks_google_services_freeze" android:defaultValue="0" android:entryValues="@array/google_services_values" />
    <com.fusionleo.salt.preference.CardPreferenceBorder  />
    <PreferenceCategory android:title="@string/dual_app"/>
    <com.fusionleo.salt.preference.MySwitchPreference android:title="@string/dual_app_cloned" android:key="leo_tweaks_dual_app_enabled" android:defaultValue="true" android:summaryOn="@string/dual_app_cloned_yes" android:summaryOff="@string/dual_app_cloned_no" />
    <com.fusionleo.salt.preference.CardPreferenceBorder  />
    <PreferenceCategory android:title="@string/list_grid_other"/>
    <com.fusionleo.salt.preference.MyPreference android:title="@string/tweaks_location" android:key="leo_tweaks_location" android:summary="@string/tweaks_location_summary" />
    <com.fusionleo.salt.preference.MyPreference android:title="@string/tweaks_wipe" android:key="leo_tweaks_wipe" android:summary="@string/tweaks_wipe_summary" />
    <com.fusionleo.salt.preference.MySwitchPreference android:title="@string/stk_dialog" android:key="leo_tweaks_stk_dialog" android:defaultValue="true" android:summaryOn="@string/on" android:summaryOff="@string/off" />
    <com.fusionleo.salt.preference.CardPreferenceBorder  />
    <com.fusionleo.salt.preference.MyPreferenceCategory android:title="@string/system_animation"/>
    <com.fusionleo.salt.preference.GlobalListPreference android:title="@string/window_animation" android:key="window_animation_scale" android:defaultValue="1" android:entries="@array/window_animation_scale_entries"   android:entryValues="@array/window_animation_scale_values" />
    <com.fusionleo.salt.preference.GlobalListPreference android:title="@string/transition_animation" android:key="transition_animation_scale" android:defaultValue="1" android:entries="@array/window_animation_scale_entries"  android:entryValues="@array/window_animation_scale_values" />
    <com.fusionleo.salt.preference.GlobalListPreference android:title="@string/animator_duration" android:key="animator_duration_scale" android:defaultValue="1" android:entries="@array/window_animation_scale_entries" android:entryValues="@array/window_animation_scale_values" />
    <com.fusionleo.salt.preference.CardPreferenceBorder  />
    <com.fusionleo.salt.preference.MyPreferenceCategory android:title="@string/mokee_animation"/>
        <com.fusionleo.salt.preference.MyListPreference android:entries="@array/listview_animation_entries" android:title="@string/list_animation" android:key="leo_tweaks_abs_list_animation_style"  android:defaultValue="0" android:entryValues="@array/listview_animation_values" />
        <com.fusionleo.salt.preference.MyListPreference android:entries="@array/listview_interpolator_entries" android:title="@string/list_interpolator" android:key="leo_tweaks_abs_list_interpolator_style" android:defaultValue="0" android:entryValues="@array/listview_interpolator_values" />
    <com.fusionleo.salt.preference.CardPreferenceBorder  />
    <com.fusionleo.salt.preference.MyPreferenceCategory android:title="@string/toast_animation"/>
    <com.fusionleo.salt.preference.MyListPreference android:entries="@array/toast_animation_entries" android:title="@string/toast_animation" android:key="leo_tweaks_toast_animation" android:defaultValue="Animation.Toast" android:entryValues="@array/toast_animation_values" />
    <com.fusionleo.salt.preference.CardPreferenceBorder  />
    <PreferenceCategory android:title="@string/secure_window"/>
    <com.fusionleo.salt.preference.MySwitchPreference android:title="@string/secure_window" android:key="leo_tweaks_secure_window" android:defaultValue="false" android:summaryOn="@string/secure_window_yes" android:summaryOff="@string/secure_window_no"/>
</PreferenceScreen>