<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <com.fusionleo.salt.preference.MyPreferenceCategory
        android:title="@string/log_log" />
    <CheckBoxPreference
        android:key="leo_tweaks_logcat"
        android:title="@string/logcat_title"
        android:defaultValue="false"
        android:summary="@string/log_summary" />

    <CheckBoxPreference
        android:key="leo_tweaks_kmseg"
        android:title="@string/kmesg_title"
        android:defaultValue="false" />

    <CheckBoxPreference
        android:key="leo_tweaks_dmesg"
        android:title="@string/dmesg_title"
        android:defaultValue="false" />
    <com.fusionleo.salt.preference.CardPreferenceBorder  />
    <com.fusionleo.salt.preference.MyPreferenceCategory
        android:title="@string/log_it_title" />

    <com.fusionleo.salt.preference.MyPreference
        android:key="leo_tweaks_log_it"
        android:title="@string/log_it_title"
        android:summary="@string/log_it_summary" />
    <com.fusionleo.salt.preference.MyPreference
        android:key="leo_tweaks_log_clean"
        android:title="@string/log_clean"
        android:summary="@string/log_clean_summary" />
    <PreferenceScreen  android:enabled="false">
        <ListPreference
            android:key="leo_tweaks_log_share_type"
            android:title="@string/log_it_share_type_title"
            android:entries="@array/log_it_share_type_entries"
            android:entryValues="@array/log_it_share_type_values"
            android:defaultValue="0" />
        <com.fusionleo.salt.preference.CardPreferenceBorder  />
    </PreferenceScreen>
</PreferenceScreen>
